force-app/main/default/objects/public_Jobs_en__x/public_Jobs_en__x.object-meta.xml
<CustomObject>
    <description>public$Jobs_en</description>
    <externalDataSource>HR</externalDataSource>
    <externalName>public$Jobs_en</externalName>
    <label>Job Master</label>
    <pluralLabel>Jobs Master</pluralLabel>
</CustomObject>