force-app/main/default/objects/public_Jobs_en__x/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Code</description>
    <externalDeveloperName>Code</externalDeveloperName>
    <label>Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>