force-app/main/default/objects/public_Jobs_en__x/fields/Compensation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Frequency__c</fullName>
    <description>Compensation Frequency</description>
    <externalDeveloperName>Compensation Frequency</externalDeveloperName>
    <label>Compensation Frequency</label>
    <length>32</length>
    <type>Text</type>
</CustomField>