force-app/main/default/objects/public_Jobs_en__x/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <description>Grade Level</description>
    <externalDeveloperName>Grade Level</externalDeveloperName>
    <label>Grade Level</label>
    <length>32</length>
    <type>Text</type>
</CustomField>