force-app/main/default/objects/public_Jobs_en__x/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <description>Job Category</description>
    <externalDeveloperName>Job Category</externalDeveloperName>
    <label>Job Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>