force-app/main/default/objects/public_Jobs_en__x/fields/Job_Family__c.field-meta.xml
<CustomField>
    <fullName>Job_Family__c</fullName>
    <description>Job Family</description>
    <externalDeveloperName>Job Family</externalDeveloperName>
    <label>Job Family</label>
    <length>128</length>
    <type>Text</type>
</CustomField>