force-app/main/default/objects/public_Jobs_en__x/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Job Title</description>
    <externalDeveloperName>Job Title</externalDeveloperName>
    <label>Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>