force-app/main/default/objects/public_Jobs_en__x/fields/Maximum_Salary__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Salary__c</fullName>
    <description>Maximum Salary</description>
    <externalDeveloperName>Maximum Salary</externalDeveloperName>
    <label>Maximum Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>