force-app/main/default/objects/public_Jobs_en__x/fields/Mid_Point_Salary__c.field-meta.xml
<CustomField>
    <fullName>Mid_Point_Salary__c</fullName>
    <description>Mid Point Salary</description>
    <externalDeveloperName>Mid Point Salary</externalDeveloperName>
    <label>Mid Point Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>