force-app/main/default/objects/public_Jobs_en__x/fields/Minimum_Salary__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Salary__c</fullName>
    <description>Minimum Salary</description>
    <externalDeveloperName>Minimum Salary</externalDeveloperName>
    <label>Minimum Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>