force-app/main/default/objects/public_Jobs_en__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Code__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Job_Category__c</columns>
    <columns>Departement__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>